<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nailedtothex</groupId>
	<artifactId>it</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>

	<repositories>
		<repository>
			<id>jboss-releases</id>
			<url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
		</repository>
	</repositories>

	<properties>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<app.name>it.war</app.name>
	</properties>

	<dependencies>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>7.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss</groupId>
			<artifactId>jboss-remote-naming</artifactId>
			<version>2.0.0.Final</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.xnio</groupId>
			<artifactId>xnio-nio</artifactId>
			<version>3.2.0.Final</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<excludes>
						<exclude>**/IT*.java</exclude>
						<exclude>**/*IT.java</exclude>
						<exclude>**/*ITCase.java</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>

		<profile>
			<id>production</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.wildfly.plugins</groupId>
						<artifactId>wildfly-maven-plugin</artifactId>
						<version>1.0.1.Final</version>
						<!-- Deployment configuration for production environment here -->
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>integration-test</id>
			<properties>
				<wildfly.home>/Users/kyle/apps2/wildfly-8.0.0.Final</wildfly.home>
				<wildfly.portoffset>30000</wildfly.portoffset>
				<wildfly.port>39990</wildfly.port>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.16</version>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.wildfly.plugins</groupId>
						<artifactId>wildfly-maven-plugin</artifactId>
						<version>1.0.1.Final</version>

						<configuration>
							<jboss-home>${wildfly.home}</jboss-home>
							<modules-path>${wildfly.home}/modules</modules-path>
							<jvm-args>-Xms64m -Xmx512m -XX:MaxPermSize=256m
								-Djava.net.preferIPv4Stack=true
								-Djboss.server.base.dir=${wildfly.home}/standalone
								-Djboss.socket.binding.port-offset=${wildfly.portoffset}</jvm-args>
							<port>${wildfly.port}</port>
						</configuration>

						<executions>
							<execution>
								<id>wildfly-run</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>start</goal>
									<goal>deploy</goal>
								</goals>
								<configuration>
									<name>${app.name}</name>
								</configuration>
							</execution>
							<execution>
								<id>wildfly-stop</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>undeploy</goal>
									<goal>shutdown</goal>
								</goals>
								<configuration>
									<name>${app.name}</name>
								</configuration>
							</execution>
						</executions>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>
</project>